# mancala_ai

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: learning.rs  main.rs  mancala.rs  packed_actions.rs  player.rs  tui.rs
