[package]
authors = ["Jason Knight <Jason@JasonKnight.us>"]
name = "mancala"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.27.0"
env_logger = "0.10"
log = "0.4"
postcard = { version = "1.0.2", features = ["alloc"] }
rand = "0.8.5"
ratatui = "0.26.1"
serde = { version = "1.0.151", features = ["derive"] }

[dev-dependencies]
env_logger = "0.10"
